# Masked-Ascon-Rust

./: Cargo.toml  README.md  TVLA_csv_daan.ipynb  generate_tests.py  simpleserial-ascon.sh
ascon-aead/: Cargo.toml
ascon-aead/src/: asconcore.rs  lib.rs
ascon-aead/tests/: kats_test_masked.rs
ascon/src/: lib.rs
simpleserial-ascon/: Cargo.toml  build.rs
simpleserial-ascon/src/: capture_to_target.rs  heap.rs  link.ld  main.rs  simpleserial.rs  target_to_capture.rs  uart.rs  util.rs
